--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solar-frontend",
+  "name": "projeto-robustec",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -18,6 +18,6 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.7",
-    "vite": "^5.4.19"
+    "vite": "^5.3.1"
   }
 }
